complete model and dal for each table in sql

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /PRJ_Assignment/nbproject/private/
 /PRJ_Assignment/build/
 /PRJ_Assignment/dist/
+/SE1723_ISE/nbproject/private/
+/PRJ_Workshop2/nbproject/private/
+/PRJ_Workshop2/build/
