--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /SE1723_ISE/nbproject/private/
 /PRJ_Workshop2/nbproject/private/
 /PRJ_Workshop2/build/
+/Timetable/nbproject/private/
+/Timetable/build/
