--- a/Timetable/nbproject/project.properties
+++ b/Timetable/nbproject/project.properties
@@ -85,6 +85,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=PRJ_Assignment.war
+war.name=Timetable.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
